--- a/editPicPage.html
+++ b/editPicPage.html
@@ -27,11 +27,16 @@
     
     <div class="container">
         <div class="toolPicker menuOff">
-
+            <div class="teal"></div>
+            <div class="light-green"></div>
+            <div class="yellow"></div>
+            <div class="orange"></div>
+            <div class="red"></div>
         </div>
         <div class="menuToggle menuTogglerOff">
             <i class="fas fa-angle-double-right"></i>
         </div>
+        
     </div>
 
     <script src="image.js"></script>
