--- a/editPicPage.html
+++ b/editPicPage.html
@@ -27,11 +27,26 @@
     
     <div class="container">
         <div class="toolPicker menuOff">
-            <div class="teal"></div>
-            <div class="light-green"></div>
-            <div class="yellow"></div>
-            <div class="orange"></div>
-            <div class="red"></div>
+            <div class="light-blue">
+                <i class="fas fa-upload"></i>
+                <p>Upload your picture</p>
+            </div>
+            <div class="teal">
+                <i class="fas fa-expand-arrows-alt"></i>
+                <p>Resize</p>
+            </div>
+            <div class="light-green">
+                <i class="fas fa-magic"></i>
+                <p>Filter</p>
+            </div>
+            <div class="yellow">
+                <i class="far fa-image"></i>
+                <p>Change Extension</p>
+            </div>
+            <div class="orange">
+                <i class="fas fa-download"></i>
+                <p>Download your picture</p>
+            </div>
         </div>
         <div class="menuToggle menuTogglerOff">
             <i class="fas fa-angle-double-right"></i>
