--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Projet</title>
+    <title>EditPic || LogPage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- MATERIALIZE -->
