--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <input placeholder="" id="first_name" type="text">
             <label for="first_name">Votre Pseudo</label>
         </div>
+        <a href="./editPicPage.html"></a>
         <button class="btn waves-effect waves-light" type="submit" name="action">
             Entrer
             <i class="fas fa-angle-right"></i>
