--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-    <form class="formulaire" method="POST" action="build/php/registerUsers.php">
+    <form class="formulaire" method="POST" action="./editPicPage.html">
         <p class="title">
             Foxhub.fr | PicEdit
         </p>
@@ -32,7 +32,6 @@
             <input placeholder="" id="first_name" type="text">
             <label for="first_name">Votre Pseudo</label>
         </div>
-        <a href="./editPicPage.html"></a>
         <button class="btn waves-effect waves-light" type="submit" name="action">
             Entrer
             <i class="fas fa-angle-right"></i>
