--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-    <form class="formulaire" method="POST" action="./editPicPage.html">
+    <form class="formulaire" method="POST" action="">
         <p class="title">
             Foxhub.fr | PicEdit
         </p>
@@ -32,10 +32,12 @@
             <input placeholder="" id="first_name" type="text">
             <label for="first_name">Votre Pseudo</label>
         </div>
-        <button class="btn waves-effect waves-light" type="submit" name="action">
-            Entrer
-            <i class="fas fa-angle-right"></i>
-        </button>
+        <a href="./editPicPage.html">
+            <button class="btn waves-effect waves-light" type="submit" name="action">
+                Entrer
+                <i class="fas fa-angle-right"></i>
+            </button>
+        </a>
     </form>
 
     <script src="image.js"></script>
