--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <label for="first_name">Votre Pseudo</label>
         </div>
         <a href="./editPicPage.html">
-            <button class="btn waves-effect waves-light" type="submit" name="action">
+            <button class="btn waves-effect waves-light" type="" name="action">
                 Entrer
                 <i class="fas fa-angle-right"></i>
             </button>
