--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-    <form class="formulaire" method="POST" action="">
+    <form class="formulaire" method="" action="./editPicPage.html">
         <p class="title">
             Foxhub.fr | PicEdit
         </p>
@@ -32,12 +32,10 @@
             <input placeholder="" id="first_name" type="text">
             <label for="first_name">Votre Pseudo</label>
         </div>
-        <a href="./editPicPage.html">
-            <button class="btn waves-effect waves-light" type="" name="action">
-                Entrer
-                <i class="fas fa-angle-right"></i>
-            </button>
-        </a>
+        <button class="btn waves-effect waves-light" type="submit" name="action">
+            Entrer
+            <i class="fas fa-angle-right"></i>
+        </button>
     </form>
 
     <script src="image.js"></script>
