Redirection main page added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-    <form class="formulaire" method="" action="./editPicPage.html">
+    <form class="formulaire" method="GET" action="./editPicPage.html">
         <p class="title">
             Foxhub.fr | PicEdit
         </p>
